# book_service

./: .gitignore  README.md  pyproject.toml
.github/workflows/: drf_tests.yml
book/book/: settings.py  urls.py
book/books/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
book/books/migrations/: 0001_initial.py  0002_alter_book_author.py  0003_alter_book_author_alter_book_genre_alter_book_theme_and_more.py
